# LVI-ExC

./: README.md
src/: .rosinstall  .rosinstall.bak  README.md
src/aloam/launch/: aloam_velodyne_VLP_16.launch
src/aloam/rviz_cfg/: aloam_velodyne.rviz
src/aloam/src/: laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
src/lvi_exc/: .gitignore  CMakeLists.txt  package.xml
src/lvi_exc/cfg/: lvi.yaml  zed.yaml
src/lvi_exc/include/core/: calib_helper_lvi.h  calibration.hpp  inertial_initializer.h  lidar_odometry.h  playable_bag.h  scan_undistortion.h  surfel_association.h  trajectory_manager_lvi.h
src/lvi_exc/include/ui/: calib_helper.h
src/lvi_exc/include/utils/: dataset_reader.h  pcl_utils.h
src/lvi_exc/include/vi_init/: cam_pose_estimator.h  feature_manager.h  feature_tracker.h  initial_alignment.h  initial_ex_rotation.h  integration_base.h  parameters.h  sfm.h  solve_5pts.h  utility.h
src/lvi_exc/launch/: apriltag_test.launch  feature_tracker_test.launch  gen_sim_orb_results.launch  li_initialize_surfel.launch  licalib_gui.launch  lsd_test.launch  lv_initialize.launch  lvi_init_orb_loam.launch  lvi_init_orb_surfel.launch  lvi_init_orb_surfel_sim.launch  mono_zed.launch  vi_initialize_atag.launch  vi_initialize_orb.launch  vi_initialize_sfm.launch  write_orb_slam_results.launch
src/lvi_exc/src/core/: calib_helper_lvi.cpp  inertial_initializer.cpp  lidar_odometry.cpp  playable_bag.cpp  surfel_association.cpp  trajectory_manager_lvi.cpp
src/lvi_exc/src/ui/: calib_helper.cpp
src/lvi_exc/src/vi_init/: cam_pose_estimator.cpp  feature_manager.cpp  feature_tracker.cpp  initial_aligment.cpp  initial_ex_rotation.cpp  parameters.cpp  sfm.cpp  solve_5pts.cpp  utility.cpp
src/lvi_exc/test/: lvi_initialize_surfel_orb.cpp  write_orb_slam_results.cpp
src/ndt_omp/include/pclomp/: voxel_grid_covariance_omp.h
src/orb_slam2/: CMakeLists.txt  package.xml
src/orb_slam2/Examples/ROS/ORB_SLAM2/: CMakeLists.txt
src/orb_slam2/Examples/ROS/ORB_SLAM2/src/: ros_mono.cc
src/orb_slam2/cfg/: sim.yaml  zed.yaml
src/orb_slam2/include/: Map.h  MapPoint.h  Optimizer.h  System.h
src/orb_slam2/launch/: mono_zed.launch
src/orb_slam2/src/: Optimizer.cc  System.cc  Tracking.cc
